# ForeAi

./: .gitignore  docker-compose-dev.yml  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
BotApiComposition/: main.py  pyproject.toml
BotApiComposition/routers/: telegram.py
Curs2024/: __init__.py  api.py  db.py  db.sqlite  documentation_collector.py  editable_table.py  forms.py  parsers.py  readme.md  utils.py
Curs2024/importers/: data_operations.py
Curs2024/models/: core.py
Curs2024/static/script/: customLog.js  docButtonsEvents.js  gridjsPreparation.js  mylang.js
Curs2024/static/styles/: style.css
Curs2024/templates/: base.html  footer.html  form-create-mistake-type.html  index.html  nav.html  system-messages-plugin.html
ForeAIBackendOld/: __init__.py  api.py  base.py  config.py  constants.py  data.py  db.py  documentation_collector.py  forms.py  parsers.py
ForeAIBackendOld/importers/: constants.py
ForeAIBackendOld/importers/xlsx/: validators.py  xlsx_operations.py
ForeAIBackendOld/static/script/: docButtons.js  gridjsCustomEvents.js  mainTableScript.js
ForeAIBackendOld/templates/: area-before-table-data.html  base.html  charts-and-diagrams-page.html  form-create-mistake-type.html  index.html  nav.html  view-queries-page.html
ForeAITgBot/: Dockerfile  __init__.py  constants.py  main.py  pyproject.toml  requirements.txt
ForeAITgBot/docker/: .example-env
ForeAiBackend/: Dockerfile  constants.py  dependencies.py  log_conf.yaml  main.py  pyproject.toml  requirements.txt  start_app.sh
ForeAiBackend/app/: .dockerignore  Dockerfile  common.py  configuration.py  conifg.py  constants.py  db.py  dependencies.py  main.py  pyproject.toml  test_documentation.http
ForeAiBackend/app/docker/: .example-env
ForeAiBackend/app/internal/: foresight_docs_logic.py  foresight_documentation_page.py
ForeAiBackend/app/middleware/: auth.py
ForeAiBackend/app/models/: collections.py  user.py
ForeAiBackend/app/routers/: customer_service.py  data.py  documentation.py  message.py
ForeAiBackend/app/services/: base_llm_service.py  base_vector_db_service.py  chroma_service.py  hashing_service.py  llm_service_provider.py  message_service.py  parse_foresight_docs.py  vector_db_provider.py  yandex_gpt_service.py
ForeAiBackend/app/tests/: test_crud.py
ForeAiBackend/app/utils/: redis_attempts.py
ForeAiBackend/internal/: chroma.py
ForeAiBackend/models/: models.py
ForeAiBackend/routers/: data.py  documentation.py  message.py
ForeAiBackend/services/: base_llm_service.py  base_vector_db_service.py  chroma_service.py  message_service.py  parse_foresight_docs.py  yandex_gpt_service.py
ForeAiBackend/tests/foreai_backend/: test_foreai.py
ForeAiBackend/tests/user_service/: test_user_service.py
db_scripts/: 1_init_db.sql  2_fill_test_data.sql
parsing/: all_urls.json  main.py  pyproject.toml
test-fastapi-bootstrap/test/: README.md  pyproject.toml
tests/foreai_backend/: test_foreai.py
tests/user_service/: test_user_service.py
